WorldCreator - add in some exceptions